# izzys-data-validator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/: data_validation_rules - template.xlsx  data_validation_rules.xlsx
src/: data_validation.py  validator.py
src/izzys_data_validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
